remove dependency on jps artifact; include utilities for instrumentation into jvm-inc-builder; preserve the order in paths that was set in the configuration
GitOrigin-RevId: c8ccc3df50a161a2cc7ec5cf95e5c503bf3920a4